# person-follower-move-base

./: CMakeLists.txt  package.xml
include/: realsense_camera.h
include/person_3d_locator/: person_3d_locator.h  person_3d_locator_int.h
launch/: person_3d_locator.launch
src/: person_3d_locator.cpp  person_3d_locator_node.cpp  realsense2_camera.cpp
